--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <center><img src="Lotus Feet.jfif" alt="Lotus Feet"></center>
       <center><h2>Śrī Caitanya-caritāmṛta Madhya-līlā 22.105</h2></center>
             <audio controls>
-                <source src="CC-Madhya.mp3.crdownload" type="audio/mpeg">
+                <source src="CC-Madhya.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
             <p>You are singing daily day, daily guru. Now, today is guru-pūrṇimā. Especially we should understand what is the power of attorney. Anyone can recite this verse, śrī-guru-caraṇa?
